--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
   margin: 0;
 }
 
-.logo {
+#logo {
   display: block;
   margin-left: auto;
   margin-right: auto;
@@ -30,7 +30,8 @@ nav {
   margin-top: 5%;
   grid-template-areas:
     'text cover';
-  align-items: center;  
+  align-items: center;
+  justify-content: center
 }
 
 .ep-cover-top {
@@ -39,12 +40,6 @@ nav {
   box-shadow: 15px 15px black;
   border: 3.5px solid black;
   grid-area: cover;
-}
-
-.imp-cap {
-  grid-area: text;
-  display: grid;
-  grid-template-rows: 30% 35% 35%; 
 }
 
 ul {
@@ -62,6 +57,10 @@ h1 {
   text-transform: uppercase;
   font-size: 45px;
   line-height: 50px;
+}
+
+#small {
+  display: none;
 }
 
 h2 {
@@ -102,11 +101,13 @@ h2 {
   grid-template-columns: repeat(5, 20%);
   grid-column-gap: 2%;
   margin: 5%;
+  position: relative;
 }
 
 .gallery-covers {
   width: 100%;
   border: 3px solid black;
+  opacity: 1;
 }
 
 #contact {
@@ -115,13 +116,6 @@ h2 {
   align-items: center;
   grid-column-gap: 5%; 
   margin-top: 10%;
-}
-
-form {
-  align: right;
-  display: grid;
-  grid-template-rows: 20% 60% 20%;
-  grid-row-gap: 20%;
 }
 
 .text-1 {
@@ -148,22 +142,26 @@ textarea {
   margin-bottom: 4%;
 }
 
-button {
+.button {
   border: 3px solid black;
   background: white;
   font-family: monospace;
-  width: 80px;
+  width: 150px;
   height: 100%;
   color: black;
+  text-align: center;
+  padding: 5px;
+  text-decoration: none;
 }
 
-button:hover {
+.button:hover {
   background: black;
   color: white;
 }
 
 .contact-img {
   width: 90%;
+  filter: grayscale(100%);
 }
 
 #about {
@@ -171,7 +169,7 @@ button:hover {
   display: grid;
   grid-template-columns: 50% 50%;
   align-items: center;
-  margin-bottom: 5%;
+  margin-bottom: 2%;
 }
 
 #our-trio {
@@ -194,4 +192,169 @@ p {
 
 .about-img {
   width: 100%;
+}
+
+footer {
+  background: black;
+  display: grid;
+  grid-template-columns: 50% 50%;
+  margin-top: 10%;
+}
+
+.footer-grid-left {
+  display: grid;
+  grid-template-rows: 50% 30% 20%;
+}
+
+.invert-logo {
+  width: 50%;
+}
+
+.footer-link {
+  font-family: monospace;
+  text-decoration: none;
+  color: white;
+  font-size: 20px;
+  padding-right: 10px;
+  padding-left: 10px;
+  margin-left: 2%;
+}
+
+.copyright {
+  font-size: 12px;
+  color: gray;
+  margin-left: 3%;
+}
+
+.footer-link-div {margin-top: 4%;}
+
+.contact-h1 {text-align: left;}
+
+#contact-h2 {text-align: left;}
+
+.email-contact {padding-bottom: 10px;}
+
+.footer-grid-right {
+  display: grid;
+  grid-template-columns: repeat(10, 10%);
+  grid-column-gap: 1%;
+  align-items: center;
+}
+
+.insta-icon {width: 50%;}
+.facebook-icon {filter: invert(100%); width: 50%;}
+.amazon-icon {width: 90%;}
+#face-id{width: 35%;}
+
+.empty-box {
+  background: black;
+  width: 100%;
+}
+
+@media (max-width: 480px) {
+  #logo {
+    width: 40%;
+  }
+  .nav-link {
+    font-size: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+  .ep-release {
+    display: block;
+  }
+  h1 {
+    text-align: center;
+    margin: 0%;
+  }
+  h2 {
+    text-align: center;
+  }
+  ul {
+    text-align: center;
+    padding: 0;
+    list-style-type: none;
+  }
+  .ep-cover-top {
+    display: block;
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 5%;
+  }
+  .music-title {
+    background: black;
+    padding-left: 10px;
+    width: 80%;
+    box-shadow: -18px 12px white, -15px 15px black;
+    margin-bottom: 30px;
+    margin-top: 10%;
+  }
+  #album-gallery {
+    display: block;
+    margin-bottom: 40%;
+  }
+  .gallery-covers {
+    width: 60%;
+  }
+  #about {
+    display: block;
+  }
+  #about-card {
+    width: 60%;
+    position: relative;
+    z-index: 2;
+    display: block;
+    margin-right: auto;
+    margin-left: auto;
+  }
+  .about-img {
+    width: 100%;
+    margin-top: -120%;
+    margin-bottom: 50%;
+    position: relative;
+    z-index: 1;
+  }
+  #contact {
+    display: block;
+  }
+  .contact-img {
+    display: block;
+    margin-right: auto;
+    margin-left: auto;
+  }
+  .contact-h1 {
+    text-align: center;
+    margin-top: 3%;
+  }
+  #contact-h2 {text-align: center;}
+  .email-contact{text-align: center;}
+  .button {
+    display: block;
+    margin-right: auto;
+    margin-left: auto;
+  }
+  footer {
+    display: block;
+  }
+  .footer-link {
+    font-size: 10px;
+    padding-right: 10px;
+  }
+  .footer-grid-right {
+    margin-bottom: 20%;
+    background: black;
+  }
+}
+
+@media (max-width: 1024px) {
+  #small {
+    display: block;
+  }
+  .img-cap h1 {
+    display: none;
+  }
+  #about-card {
+    width: 50%;
+  }
 }
