--- a/styles.css
+++ b/styles.css
@@ -251,7 +251,7 @@ footer {
   width: 100%;
 }
 
-@media (max-width: 1024px) {
+@media (min-width: 501px) and (max-width: 1024px) {
   #small {
     display: block;
   }
