--- a/styles.css
+++ b/styles.css
@@ -251,7 +251,7 @@ footer {
   width: 100%;
 }
 
-@media (min-width: 501px) and (max-width: 1024px) {
+@media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
   #small {
     display: block;
   }
@@ -263,7 +263,7 @@ footer {
   }
 }
 
-@media (max-width: 500px) {
+@media (min-width: 320px) and (max-width: 767px) {
   #logo {
     width: 40%;
   }
