--- a/styles.css
+++ b/styles.css
@@ -110,6 +110,13 @@ h2 {
   opacity: 1;
 }
 
+#listen-here {
+  padding: 5px 0px 5px 0px;
+  display: block;
+  width: 100%;
+  height: 5%;
+}
+
 #contact {
   display: grid;
   grid-template-columns: 50% 45%;
