--- a/styles.css
+++ b/styles.css
@@ -104,6 +104,10 @@ h2 {
   position: relative;
 }
 
+.album-card {
+  display: block;
+}
+
 .gallery-covers {
   width: 100%;
   border: 3px solid black;
@@ -112,7 +116,6 @@ h2 {
 
 #listen-here {
   padding: 5px 0px 5px 0px;
-  display: block;
   width: 100%;
   height: 5%;
 }
