--- a/styles.css
+++ b/styles.css
@@ -275,6 +275,19 @@ footer {
   }
 }
 
+@media (min-width: 481px) and (max-width: 1024px) and (orientation: portrait) {
+  #about-card {
+    width: 35%;
+    margin-left: 30%;
+  }
+  #small {
+    display: block;
+  }
+  .img-cap h1 {
+    display: none;
+  }
+}
+
 @media (max-width: 480px) {
   #logo {
     width: 40%;
