--- a/styles.css
+++ b/styles.css
@@ -273,6 +273,12 @@ footer {
   #about-card {
     width: 50%;
   }
+  h2 {
+    font-size: 25px;
+  }
+  footer-link {
+    font-size: 10px;
+  }
 }
 
 @media (min-width: 481px) and (max-width: 1024px) and (orientation: portrait) {
