--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@ nav {
 
 .ep-release {
   display: grid;
-  grid-template-columns: 50% 50%;
+  grid-template-columns: 30% 70%;
   grid-column-gap: 5%;
   margin-top: 5%;
   grid-template-areas:
@@ -118,6 +118,7 @@ h2 {
 
 #listen-here {
   padding: 5px 0px 5px 0px;
+  margin-bottom: 10px;
   width: 100%;
   height: 20px;
 }
