--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@ nav {
 
 .ep-release {
   display: grid;
-  grid-template-columns: 30% 70%;
+  grid-template-columns: 40% 60%;
   grid-column-gap: 5%;
   margin-top: 5%;
   grid-template-areas:
@@ -342,9 +342,7 @@ footer {
     margin-bottom: 40%;
   }
   .album-card {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start; 
+    display: block; 
   }
   .gallery-covers {
     width: 60%;
