--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@ nav {
 
 .ep-release {
   display: grid;
-  grid-template-columns: 50% 50%;
+  grid-template-columns: 40% 60%;
   grid-column-gap: 5%;
   margin-top: 5%;
   grid-template-areas:
@@ -346,6 +346,7 @@ footer {
   }
   .gallery-covers {
     width: 60%;
+    margin-bottom: 3%;
     display: block;
     margin-left: auto;
     margin-right: auto;
