--- a/styles.css
+++ b/styles.css
@@ -207,6 +207,48 @@ p {
   width: 100%;
 }
 
+
+.merch-head {
+  text-align: center;
+  font-family: 'Concert One';
+  text-transform: uppercase;
+  font-size: 45px;
+  line-height: 40px;
+}
+
+.merch-sub {
+  text-align: center;
+  font-size: 15px;
+  line-height: 0.5;
+}
+
+#merch-gallery {
+  display: grid;
+  grid-template-columns: 50%
+  grid-column-gap: 2%;
+  margin: 4% 31.5% 0% 30%;
+  position: relative;
+  grid-template-rows: auto 1fr;
+}
+
+.merch-card {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+#large {
+  grid-row: auto / span 2;
+}
+
+.merch-covers {
+  width: 100%;
+  border: 3px solid black;
+  opacity: 1;
+}
+
+
+
 footer {
   background: black;
   display: grid;
