--- a/styles.css
+++ b/styles.css
@@ -214,13 +214,14 @@ p {
   text-transform: uppercase;
   font-size: 45px;
   line-height: 45px;
+  margin-bottom: 1%;
 }
 
 .merch-sub {
   text-align: center;
   font-size: 15px;
   line-height: 18px;
-  margin-top: 1%;
+  margin-top: 2%;
 }
 
 #merch-gallery {
