--- a/styles.css
+++ b/styles.css
@@ -422,8 +422,8 @@ footer {
   
   .merch-covers {
     width: 200%;
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: 10%;
+    margin-right: 10%;
   }
   
   #contact {
