--- a/styles.css
+++ b/styles.css
@@ -421,9 +421,11 @@ footer {
   }
   
   .merch-covers {
-    width: 200%;
-    margin-left: 10%;
-    margin-right: 40%;
+    display: block;
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 5%;
   }
   
   #contact {
